@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: regexp.test,v 1.13 2010/02/19 06:19:00 mdejong Exp $
+# RCS: @(#) $Id: regexp.test,v 1.14 2010/02/21 18:30:44 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -1046,6 +1046,10 @@ test regexp-26.12 {regexp with -line option} {
 test regexp-26.13 {regexp without -line option} {
     regexp -all -inline -- {a*} "b\n"
 } {{} {}}
+
+# FIXME: current regsub tests don't test the {n} embedded parameter,
+# so they can work incorrectly by looking at the flags parameter
+# and conditionally working when the -line flag is passed.
 
 # cleanup
 ::tcltest::cleanupTests
